Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Peter McCluskey (May 11 2001)
  - add filter options (using pcre regular expressions):
     filter_out
     filter_require
     filter_out_full_body
     filter_require_full_body

Peter McCluskey (May 9 2001)
  - fix links to attachments in subdir index files.

Peter McCluskey (May 8 2001)
  - fixed bug with incremental update that caused the index files to
   ignore messages beyond set_searchbackmsgnum.

Daniel Stenberg (May 8 2001)
  - Removed the last traces of mprintf.[ch] and made the trio stuff work
    completely as a replacement.

Peter McCluskey (May 7 2001)
  - fixes to trio configuration.

Peter McCluskey (May 4 2001)
  - another fix to avoid_top_indices = folders.
  - enhance show_msg_links to support links only at top or only at bottom.
  - add show_index_links option to control links from message page to indices.
  - add txtsuffix option
  - On/Yes now converted to 1 for CFG_INTEGER options (for compatibility
   with options that used to be CFG_SWITCH's)
  - fix append option so that it handles uuencoded attachments and
    mdecodeQP() calls correctly.

Kent Landfield (May 4 2001)
  - corrected compilation issue for Sun CC in string.c
  - corrected check for set_custom_archives in hypermail.c

Peter McCluskey (May 1 2001)
  - convert mprintf calls to trio calls

Peter McCluskey (Apr 27 2001)
  - allow incremental update with folder_by_date on empty archive, improve
  error messages for missing gdbm file with folder_by_date, incremental update.

Peter McCluskey (Apr 26 2001)
  - fixed so that avoid_top_indices = folders works.

Peter McCluskey (Apr 24 2001)
  - fix urls at end of index page with folder_by_date.

Peter McCluskey (Apr 20 2001)
  - patch from Hisashi Gotoh <gotoh@horae.dti.ne.jp> to fix message/rfc822
   handling with showhtml = 0.

Peter McCluskey (Apr 18 2001)
  - changed configure script to check several directories for gdbm.h,
    provide --with-gdbm=DIR option.
